# xts-socket

./: .hlint.yaml  Main.hs  README.md  socket.cabal  stack.yaml  xts-socket.cabal
.github/scripts/: install-tools.sh
.github/workflows/: stack-ci.yml
examples/: HelloWorldServer.hs
platform/linux/include/: hs_socket.h
platform/linux/src/System/Socket/Internal/: Platform.hs
platform/win32/include/: hs_socket.h
platform/win32/src/System/Socket/Internal/: Platform.hs
src/System/: Socket.hs
src/System/Socket/: Unsafe.hs
src/System/Socket/Family/: Inet.hs  Inet6.hs
src/System/Socket/Internal/: AddressInfo.hs  Constants.hs  Endian.hs  Exception.hs  Message.hs  Socket.hs  SocketOption.hs
src/System/Socket/Protocol/: Default.hs  TCP.hs  UDP.hs
src/System/Socket/Type/: Datagram.hs  Raw.hs  SequentialPacket.hs  Stream.hs
test/: external.hs  test.hs
test-ext/: test.hs
